# app/src/api/models/AlgorithmValuesSoftKPIsIntegrationEffort.ts
@@ -2,7 +2,7 @@
 /* eslint-disable */
 /**
  * Snowman API
- * _This document describes the REST API of the snowman data matching benchmark tool._ Comparing data matching algorithms is still an unsolved topic in both industry and research.  With snowman, developers and researchers will be able to compare the performance of different data matching  solutions or improve new algorithms. 
+ * _This document describes the REST API of the snowman data matching benchmark tool._ Comparing data matching algorithms is still an unsolved topic in both industry and research. With snowman, developers and researchers will be able to compare the performance of different data matching solutions or improve new algorithms. 
  *
  * The version of the OpenAPI document: 1.0.0
  * Contact: snowman@groups.sap.com
@@ -12,78 +12,86 @@
  * Do not edit the class manually.
  */
 
-import { exists, mapValues } from '../runtime';
-/**
- * 
- * @export
- * @interface AlgorithmValuesSoftKPIsIntegrationEffort
- */
-export interface AlgorithmValuesSoftKPIsIntegrationEffort {
-    /**
-     * 
-     * @type {number}
-     * @memberof AlgorithmValuesSoftKPIsIntegrationEffort
-     */
-    integrationTime?: number;
-    /**
-     * 
-     * @type {Array<string>}
-     * @memberof AlgorithmValuesSoftKPIsIntegrationEffort
-     */
-    deploymentType?: Array<string>;
-    /**
-     * 
-     * @type {Array<string>}
-     * @memberof AlgorithmValuesSoftKPIsIntegrationEffort
-     */
-    solutionType?: Array<string>;
-    /**
-     * 
-     * @type {Array<string>}
-     * @memberof AlgorithmValuesSoftKPIsIntegrationEffort
-     */
-    useCase?: Array<string>;
-    /**
-     * 
-     * @type {number}
-     * @memberof AlgorithmValuesSoftKPIsIntegrationEffort
-     */
-    generalCosts?: number;
-}
-
-export function AlgorithmValuesSoftKPIsIntegrationEffortFromJSON(json: any): AlgorithmValuesSoftKPIsIntegrationEffort {
-    return AlgorithmValuesSoftKPIsIntegrationEffortFromJSONTyped(json, false);
-}
-
-export function AlgorithmValuesSoftKPIsIntegrationEffortFromJSONTyped(json: any, ignoreDiscriminator: boolean): AlgorithmValuesSoftKPIsIntegrationEffort {
-    if ((json === undefined) || (json === null)) {
-        return json;
-    }
-    return {
-        
-        'integrationTime': !exists(json, 'integrationTime') ? undefined : json['integrationTime'],
-        'deploymentType': !exists(json, 'deploymentType') ? undefined : json['deploymentType'],
-        'solutionType': !exists(json, 'solutionType') ? undefined : json['solutionType'],
-        'useCase': !exists(json, 'useCase') ? undefined : json['useCase'],
-        'generalCosts': !exists(json, 'generalCosts') ? undefined : json['generalCosts'],
-    };
-}
-
-export function AlgorithmValuesSoftKPIsIntegrationEffortToJSON(value?: AlgorithmValuesSoftKPIsIntegrationEffort | null): any {
-    if (value === undefined) {
-        return undefined;
-    }
-    if (value === null) {
-        return null;
-    }
-    return {
-        
-        'integrationTime': value.integrationTime,
-        'deploymentType': value.deploymentType,
-        'solutionType': value.solutionType,
-        'useCase': value.useCase,
-        'generalCosts': value.generalCosts,
-    };
-}
-
-
+ import { exists, mapValues } from '../runtime';
+ import {
+     EffortParts,
+     EffortPartsFromJSON,
+     EffortPartsFromJSONTyped,
+     EffortPartsToJSON,
+ } from './';
+ 
+ /**
+  * 
+  * @export
+  * @interface AlgorithmValuesSoftKPIsIntegrationEffort
+  */
+ export interface AlgorithmValuesSoftKPIsIntegrationEffort {
+     /**
+      * 
+      * @type {EffortParts}
+      * @memberof AlgorithmValuesSoftKPIsIntegrationEffort
+      */
+     installationEffort?: EffortParts;
+     /**
+      * 
+      * @type {Array<string>}
+      * @memberof AlgorithmValuesSoftKPIsIntegrationEffort
+      */
+     deploymentType?: Array<string>;
+     /**
+      * 
+      * @type {Array<string>}
+      * @memberof AlgorithmValuesSoftKPIsIntegrationEffort
+      */
+     solutionType?: Array<string>;
+     /**
+      * 
+      * @type {Array<string>}
+      * @memberof AlgorithmValuesSoftKPIsIntegrationEffort
+      */
+     useCase?: Array<string>;
+     /**
+      * 
+      * @type {number}
+      * @memberof AlgorithmValuesSoftKPIsIntegrationEffort
+      */
+     generalCosts?: number;
+ }
+ 
+ export function AlgorithmValuesSoftKPIsIntegrationEffortFromJSON(json: any): AlgorithmValuesSoftKPIsIntegrationEffort {
+     return AlgorithmValuesSoftKPIsIntegrationEffortFromJSONTyped(json, false);
+ }
+ 
+ export function AlgorithmValuesSoftKPIsIntegrationEffortFromJSONTyped(json: any, ignoreDiscriminator: boolean): AlgorithmValuesSoftKPIsIntegrationEffort {
+     if ((json === undefined) || (json === null)) {
+         return json;
+     }
+     return {
+         
+         'installationEffort': !exists(json, 'installationEffort') ? undefined : EffortPartsFromJSON(json['installationEffort']),
+         'deploymentType': !exists(json, 'deploymentType') ? undefined : json['deploymentType'],
+         'solutionType': !exists(json, 'solutionType') ? undefined : json['solutionType'],
+         'useCase': !exists(json, 'useCase') ? undefined : json['useCase'],
+         'generalCosts': !exists(json, 'generalCosts') ? undefined : json['generalCosts'],
+     };
+ }
+ 
+ export function AlgorithmValuesSoftKPIsIntegrationEffortToJSON(value?: AlgorithmValuesSoftKPIsIntegrationEffort | null): any {
+     if (value === undefined) {
+         return undefined;
+     }
+     if (value === null) {
+         return null;
+     }
+     return {
+         
+         'installationEffort': EffortPartsToJSON(value.installationEffort),
+         'deploymentType': value.deploymentType,
+         'solutionType': value.solutionType,
+         'useCase': value.useCase,
+         'generalCosts': value.generalCosts,
+     };
+ }
+ 
+ 
+ 
