# wrapper/src/api/server/types/Algorithm.ts
@@ -2,7 +2,7 @@
 /* eslint-disable */
 /**
  * Snowman API
- * _This document describes the REST API of the snowman data matching benchmark tool._ Comparing data matching algorithms is still an unsolved topic in both industry and research.  With snowman, developers and researchers will be able to compare the performance of different data matching  solutions or improve new algorithms. 
+ * _This document describes the REST API of the snowman data matching benchmark tool._ Comparing data matching algorithms is still an unsolved topic in both industry and research. With snowman, developers and researchers will be able to compare the performance of different data matching solutions or improve new algorithms. 
  *
  * The version of the OpenAPI document: 1.0.0
  * Contact: snowman@groups.sap.com
@@ -12,51 +12,57 @@
  * Do not edit the class manually.
  */
 
-import {
-    AlgorithmValuesSoftKPIs,
-    Metric,
-} from './';
-
-/**
- * 
- * @export
- * @interface Algorithm
- */
-export interface Algorithm {
-    /**
-     * 
-     * @type {number}
-     * @memberof Algorithm
-     */
-    id: number;
-    /**
-     * 
-     * @type {Array<Metric>}
-     * @memberof Algorithm
-     */
-    matchingSolutionEffort?: Array<Metric>;
-    /**
-     * 
-     * @type {Array<Metric>}
-     * @memberof Algorithm
-     */
-    domainEffort?: Array<Metric>;
-    /**
-     * 
-     * @type {string}
-     * @memberof Algorithm
-     */
-    name: string;
-    /**
-     * 
-     * @type {string}
-     * @memberof Algorithm
-     */
-    description?: string;
-    /**
-     * 
-     * @type {AlgorithmValuesSoftKPIs}
-     * @memberof Algorithm
-     */
-    softKPIs?: AlgorithmValuesSoftKPIs;
-}
+ import {
+     AlgorithmValuesSoftKPIs,
+     Metric,
+ } from './';
+ 
+ /**
+  * 
+  * @export
+  * @interface Algorithm
+  */
+ export interface Algorithm {
+     /**
+      * 
+      * @type {number}
+      * @memberof Algorithm
+      */
+     id: number;
+     /**
+      * 
+      * @type {Array<Metric>}
+      * @memberof Algorithm
+      */
+     matchingSolutionEffort?: Array<Metric>;
+     /**
+      * 
+      * @type {Array<Metric>}
+      * @memberof Algorithm
+      */
+     domainEffort?: Array<Metric>;
+     /**
+      * 
+      * @type {Array<Metric>}
+      * @memberof Algorithm
+      */
+     installationEffort?: Array<Metric>;
+     /**
+      * 
+      * @type {string}
+      * @memberof Algorithm
+      */
+     name: string;
+     /**
+      * 
+      * @type {string}
+      * @memberof Algorithm
+      */
+     description?: string;
+     /**
+      * 
+      * @type {AlgorithmValuesSoftKPIs}
+      * @memberof Algorithm
+      */
+     softKPIs?: AlgorithmValuesSoftKPIs;
+ }
