# wrapper/src/api/server/types/AlgorithmAllOf.ts
@@ -2,7 +2,7 @@
 /* eslint-disable */
 /**
  * Snowman API
- * _This document describes the REST API of the snowman data matching benchmark tool._ Comparing data matching algorithms is still an unsolved topic in both industry and research.  With snowman, developers and researchers will be able to compare the performance of different data matching  solutions or improve new algorithms. 
+ * _This document describes the REST API of the snowman data matching benchmark tool._ Comparing data matching algorithms is still an unsolved topic in both industry and research. With snowman, developers and researchers will be able to compare the performance of different data matching solutions or improve new algorithms. 
  *
  * The version of the OpenAPI document: 1.0.0
  * Contact: snowman@groups.sap.com
@@ -12,32 +12,38 @@
  * Do not edit the class manually.
  */
 
-import {
-    Metric,
-} from './';
-
-/**
- * 
- * @export
- * @interface AlgorithmAllOf
- */
-export interface AlgorithmAllOf {
-    /**
-     * 
-     * @type {number}
-     * @memberof AlgorithmAllOf
-     */
-    id: number;
-    /**
-     * 
-     * @type {Array<Metric>}
-     * @memberof AlgorithmAllOf
-     */
-    matchingSolutionEffort?: Array<Metric>;
-    /**
-     * 
-     * @type {Array<Metric>}
-     * @memberof AlgorithmAllOf
-     */
-    domainEffort?: Array<Metric>;
-}
+ import {
+     Metric,
+ } from './';
+ 
+ /**
+  * 
+  * @export
+  * @interface AlgorithmAllOf
+  */
+ export interface AlgorithmAllOf {
+     /**
+      * 
+      * @type {number}
+      * @memberof AlgorithmAllOf
+      */
+     id: number;
+     /**
+      * 
+      * @type {Array<Metric>}
+      * @memberof AlgorithmAllOf
+      */
+     matchingSolutionEffort?: Array<Metric>;
+     /**
+      * 
+      * @type {Array<Metric>}
+      * @memberof AlgorithmAllOf
+      */
+     domainEffort?: Array<Metric>;
+     /**
+      * 
+      * @type {Array<Metric>}
+      * @memberof AlgorithmAllOf
+      */
+     installationEffort?: Array<Metric>;
+ }
